--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@vercel/analytics": "^1.1.2",
     "@vercel/speed-insights": "^1.0.8",
+    "axios": "^1.7.9",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18"
